# lab-web

./: ReadMe.md  config.py  manage.py  pyproject.toml  requirements.txt
app/: __init__.py  decorators.py  models.py  utils.py
app/forms/: auth.py  book.py  depot.py  main.py  user.py
app/static/js/: depot.js
app/views/: book.py  depot.py  main.py  record.py  user.py
test/: base.py  test.py  test_auth.py
