[project]
name = "lab-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "flask>=3.1.3",
    "flask-admin>=2.0.2",
    "flask-bootstrap>=3.3.7.1",
    "flask-dropzone>=2.0.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-moment>=1.0.6",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "marshmallow>=4.2.3",
    "openpyxl>=3.1.5",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.48",
    "werkzeug>=3.1.7",
    "wtforms>=3.2.1",
    "xlrd>=2.0.2",
    "xlwt>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]


[tool.deptry]
# 排除掉不需要检查依赖的脚本文件
extend_exclude = ["fabfile.py"]

[tool.deptry.package_module_name_map]
# 告诉 deptry：代码里的 import jwt 实际上就是 pyjwt 包
pyjwt = "jwt"